# milstone

./: README.md  pyproject.toml
docs/: db_schema.md
src/milstone/: __init__.py  cli.py  server.py  state.py
src/milstone/data/: decision_policy_template.yml  llm_instructions_template.txt
src/milstone/static/css/: app.css
src/milstone/static/js/: app.js
src/milstone/templates/: index.html
